# PTI

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: evaluation_config.py  global_config.py  hyperparameters.py  paths_config.py
criteria/: localitly_regulizer.py
editings/: ganspace.py  latent_editor.py
editings/interfacegan_directions/: rotation.pt
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
evaluation/: experiment_setting_creator.py  qualitative_edit_comparison.py
models/StyleCLIP/global_directions/dnnlib/tflib/: custom_ops.py
models/StyleCLIP/mapper/: latent_mappers.py  styleclip_mapper.py
models/StyleCLIP/mapper/options/: test_options.py
models/StyleCLIP/mapper/scripts/: inference.py
models/StyleCLIP/mapper/training/: ranger.py
models/StyleCLIP/optimization/: run_optimization.py
notebooks/: align_data.ipynb
scripts/: latent_editor_wrapper.py  pti_styleclip.py  run_pti.py
scripts/latent_creators/: base_latent_creator.py  e4e_latent_creator.py  sg2_latent_creator.py  sg2_plus_latent_creator.py
training/coaches/: base_coach.py  multi_id_coach.py  single_id_coach.py
training/projectors/: w_plus_projector.py  w_projector.py
utils/: ImagesDataset.py  align_data.py  alignment.py  log_utils.py  models_utils.py
